usbredir-0.3.2 unreleased
-------------------------
-Switched to automake/autoconf/libtool based make system (Christophe Fergeau)

-usbredirparser:
 -limited multi-thread safeness, see README.multi-thread
 -extend the device_connect packet header with a device_version field
  This new field is only send / received if both sides have the (new)
  usb_redir_cap_connect_device_version capability.

-usbredirhost:
 -limited multi-thread safeness, see README.multi-thread
 -properly handle clear stalls send from the usbguest
 -try to keep our iso buffer size near the target size


usbredir-0.3.1 18 August 2011
-----------------------------
-usbredirparser:
 -add a usbredirparser_fl_write_cb_owns_buffer flag
  See the comment in usbredirparser.h above usbredirparser_write for details.
 -add a usbredirparser_free_packet_data function for symetry with
  usbredirparser_free_write_buffer

-usbredirhost:
 -Fix device resets
 -Add a flags parameter to usbredirhost_open, this accepts the following flags:
  usbredirhost_fl_write_cb_owns_buffer
 -The flags parameter causes an ABI breakage, new soname: libusbredirhost.so.1

-usbredirserver:
 -Fix -v flag


ubsredir-0.3 14 July 2011
-------------------------
-Initial release, start at version 0.3 to match the version of
 the protocol desciption doc usb-redirection-protocol.txt